--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -858,3 +858,14 @@ a6e7d5b9-fbd8-46f1-a878-b4945df7ac6e:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+c1d0c271-5e31-4ce5-ac2a-36fc0501edab:
+  name: crenk
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
