server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -869,3 +869,14 @@ c1d0c271-5e31-4ce5-ac2a-36fc0501edab:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+df60c736-b8a6-44a3-ba44-3ea40e727da4:
+  name: EXP
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
