server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -767,6 +767,6 @@ users:
       name: Ned_mo
   c1d0c271-5e31-4ce5-ac2a-36fc0501edab:
     group:
-    - owner
+    - member
     options:
       name: crenk
