server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -714,12 +714,6 @@ users:
       Survival:
         group:
         - member
-  kyeee:
-    group:
-    - mod
-  jacob50505:
-    group:
-    - builder
   33ee6a10-80cb-4787-8011-762ca13b65a9:
     options:
       name: Pqu
@@ -770,3 +764,13 @@ users:
     - member
     options:
       name: crenk
+  445c3cc4-2e19-263b-8078-49cb508e4cfa:
+    group:
+    - builder
+    options:
+      name: jacob50505
+  0e24cc1b-81c3-2567-a6e8-5ab9362bcb29:
+    group:
+    - mod
+    options:
+      name: kyeee
