server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -880,3 +880,14 @@ df60c736-b8a6-44a3-ba44-3ea40e727da4:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+b96de187-ce5e-4301-a44b-89e8acd85a70:
+  name: BaconstripsEMT
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
