server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -891,3 +891,14 @@ b96de187-ce5e-4301-a44b-89e8acd85a70:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+478961f0-0ffe-4b03-9f44-1c46cb5d8a32:
+  name: Autismisrife
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
