server auto-save

--- a/plugins/AdvancedBan/data/storage.properties
+++ b/plugins/AdvancedBan/data/storage.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Mon Jul 23 16:13:43 BST 2018
+#Mon Jul 23 16:22:39 BST 2018
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
