--- a/plugins/AdvancedBan/data/storage.properties
+++ b/plugins/AdvancedBan/data/storage.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Mon Jul 23 16:22:39 BST 2018
+#Mon Jul 23 16:48:06 BST 2018
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
