--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,text,inventory,equipment,anchors,speech,lookclose,owner,gravity,location,spawned,waypoints,type
+    traitnames: lookclose,owner,equipment,spawned,location,type,anchors,gravity,speech,mounttrait,text,waypoints,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,anchors,text,speech,lookclose,inventory,gravity,owner,location,spawned,type
+    traitnames: lookclose,speech,owner,mounttrait,spawned,text,equipment,location,type,gravity,anchors,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,inventory,gravity,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,inventory,gravity,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,gravity,owner,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,inventory,gravity,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,owner,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,owner,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,gravity,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,owner,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,gravity,owner,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,gravity,owner,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,gravity,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -609,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,sentinel,equipment,lookclose,owner,gravity,inventory,location,spawned,waypoints,type
+    traitnames: lookclose,owner,sentinel,mounttrait,equipment,spawned,location,type,gravity,waypoints,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -741,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,sentinel,equipment,lookclose,gravity,owner,inventory,location,spawned,type
+    traitnames: lookclose,owner,sentinel,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -873,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,sentinel,equipment,lookclose,inventory,owner,gravity,location,spawned,type
+    traitnames: lookclose,owner,sentinel,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -906,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,owner,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -938,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,owner,gravity,inventory,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -967,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,location,spawned,type
+    traitnames: lookclose,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -996,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,location,spawned,type
+    traitnames: lookclose,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1025,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,location,spawned,type
+    traitnames: lookclose,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1054,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,location,spawned,type
+    traitnames: lookclose,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1083,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,location,spawned,type
+    traitnames: lookclose,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1112,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,location,spawned,type
+    traitnames: lookclose,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1141,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,location,spawned,type
+    traitnames: lookclose,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1173,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: mounttrait,equipment,lookclose,inventory,owner,gravity,location,spawned,type
+    traitnames: lookclose,owner,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1202,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,gravity,inventory,location,spawned,type
+    traitnames: lookclose,mounttrait,spawned,equipment,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1231,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: mounttrait,equipment,lookclose,inventory,gravity,location,spawned,type
+    traitnames: lookclose,mounttrait,equipment,spawned,location,type,gravity,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1256,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: mounttrait,lookclose,location,age,spawned,type
+    traitnames: lookclose,age,mounttrait,spawned,location,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
