server auto-save

--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -1047,7 +1047,7 @@ npc:
         x: '1831.2998'
         y: '55.5'
         z: '-738.2998'
-        yaw: '-143.71533203125'
+        yaw: '-135.0'
         pitch: '0.0'
       lookclose:
         range: '5.0'
