server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -447,6 +447,9 @@ users:
       Survival_nether:
         group:
         - member
+      Staff:
+        group:
+        - member
   9d41cc84-c13a-41c5-b5b2-8456053df895:
     group:
     - retired
