server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -902,3 +902,14 @@ b96de187-ce5e-4301-a44b-89e8acd85a70:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+a74f3930-7355-4e41-a8d9-66d1c0f3e17b:
+  name: saggyy
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
