server auto-save

--- a/plugins/FastAsyncWorldEdit/message.yml
+++ b/plugins/FastAsyncWorldEdit/message.yml
@@ -156,6 +156,8 @@ worldedit:
     brush_transform_disabled: Brush transform disabled
     brush_transform: Brush transform set
     brush_material: Brush material set
+    brush_catenary_direction: Added point %s0, click the direction you want to create
+      the spline
   rollback:
     rollback_element: Undoing %s0
   tool:
