server auto-save

--- a/plugins/GriefPreventionData/ClaimData/98.yml
+++ b/plugins/GriefPreventionData/ClaimData/98.yml
@@ -1,7 +1,8 @@
 Lesser Boundary Corner: Survival;13081;56;44555
 Greater Boundary Corner: Survival;13089;56;44563
 Owner: d7c11106-1d08-4b85-a4b1-8e61311ee8ef
-Builders: []
+Builders:
+- f6a8775c-b8a6-4fb2-92fe-669ad0f4d9d4
 Containers: []
 Accessors: []
 Managers: []
