server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -913,3 +913,25 @@ a74f3930-7355-4e41-a8d9-66d1c0f3e17b:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+f6a8775c-b8a6-4fb2-92fe-669ad0f4d9d4:
+  name: katherineleigh3
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
+d7c11106-1d08-4b85-a4b1-8e61311ee8ef:
+  name: KingSwirlyEyes
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
