--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,mounttrait,inventory,text,anchors,type,equipment,lookclose,location,speech,owner,waypoints,spawned
+    traitnames: gravity,mounttrait,speech,anchors,lookclose,owner,text,spawned,location,waypoints,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,speech,owner,text,spawned,anchors
+    traitnames: gravity,mounttrait,speech,spawned,text,anchors,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -609,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,sentinel,inventory,equipment,lookclose,location,owner,spawned,waypoints
+    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,waypoints,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -741,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,sentinel,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,owner,type,equipment
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -764,7 +764,7 @@ npc:
         realisticlooking: false
       location:
         world: Survival
-        x: '187.3842'
+        x: '187.3841'
         y: '65.0'
         z: '343.3811'
         yaw: '-149.15834045410156'
@@ -798,7 +798,7 @@ npc:
           mdata: 0
       sentinel:
         stats_ticksSpawned: 31571086
-        stats_timesSpawned: 131
+        stats_timesSpawned: 132
         stats_arrowsFired: 0
         stats_potionsThrow: 0
         stats_fireballsFired: 0
@@ -873,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,sentinel,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,sentinel,location,inventory,owner,type,equipment
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -906,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -938,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -967,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -996,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1025,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1054,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1083,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1112,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1141,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1173,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,owner,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,owner,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1202,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1231,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,type,mounttrait,inventory,equipment,lookclose,location,spawned
+    traitnames: gravity,mounttrait,spawned,lookclose,location,inventory,type,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1256,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: type,mounttrait,lookclose,location,age,spawned
+    traitnames: mounttrait,spawned,age,lookclose,location,type
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
