server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -935,3 +935,14 @@ d7c11106-1d08-4b85-a4b1-8e61311ee8ef:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+52b45ef5-2d9e-45af-8eb3-e2c51e58b82a:
+  name: auakiry
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
