--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -946,3 +946,14 @@ d7c11106-1d08-4b85-a4b1-8e61311ee8ef:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+2a92600c-0e03-490a-8e79-137d9f5d23e1:
+  name: griff48432
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
